Add a Lua behavioural harness and document the dedicated-server smoke test
tests/harness.lua loads the real vanilla ISBaseObject / ISBaseTimedAction /
ISChopTreeAction / ISRemoveBush from the game install, then the real mod Lua on
top, with the PZ globals stubbed. Nothing under test is reimplemented: the
wrappers run against vanilla's own animEvent() and complete() bodies.

29 assertions, all passing:
- per-swing XP, tree felled exactly once, latch blocks a second payout
- MP client grants nothing
- tree size/sprite sampled before vanilla removes the tree
- bush grants XP once; wall vine and stale square grant nothing
- oneHitLevelThreshold at 0, 6 and 99
- base TreeDamage snapshot does not ratchet over 20 applications
- AdjustNatureAbundance idempotent, and abundance 1/3/5 scale as intended
- OnWeaponHitTree melee path still awards XP

One caveat, documented in the harness and in AGENTS.md: vanilla
ISRemoveBush.lua:152 assigns to a numeric-for control variable, which is legal
and dead under Lua 5.1 but a compile error under 5.4+. The harness require()
neutralises exactly that statement.

AGENTS.md section 11 also gains the dedicated-server smoke test - the command
line, the seven log lines that constitute a pass, and the note that
NoSuchFileException for media/AnimSets and media/actiongroups is the engine
probing optional dirs for every mod.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>